Perbaikan Link Hosting Gambar Github

--- a/themes/zalepik/layouts/_default/list.html
+++ b/themes/zalepik/layouts/_default/list.html
@@ -50,7 +50,7 @@
                 <a href="{{ .Permalink }}" class="zalepik_image_galery">
                     <div class="video_thumbnail">
                         <img class="overlay_thumbnail"  src="{{ .Params.thumbnail }}" alt="{{ .Title }}">
-                        <img class="button_play" src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_icon_play.svg" alt="" srcset="">
+                        <img class="button_play" src="https://zenzalepik.github.io/Zalepik_Images/img_icon_play.svg" alt="" srcset="">
                         <div class="time_duration">
                         03:45
                         </div></div>
