--- a/themes/zalepik/layouts/index.html
+++ b/themes/zalepik/layouts/index.html
@@ -2,7 +2,7 @@
 <!-- Main -->
 <main>
   <div class="w-full">
-    <img class="sm:px-32 px-4 sm:pt-20 pt-32 w-full" src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_zalepik_bisnis_melesat_website_hebat.png" alt="" srcset="">
+    <img class="sm:px-32 px-4 sm:pt-20 pt-32 w-full" src="https://zenzalepik.github.io/Zalepik_Images/img_zalepik_bisnis_melesat_website_hebat.png" alt="" srcset="">
   </div>
   <div class="zalepik_wrap_title_section">
     <div id="title_header_home" class="zalepik_wrap_large_area text-center">
@@ -15,7 +15,7 @@
         class="sm:col-start-1 sm:col-end-4 col-start-1 col-end-13 bg-cyan_gray_light rounded-tl-3xl sm:rounded-tl-none">
         <div>
           <img class="rounded-2xl"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/img_icon_domain_zalepik.svg" alt="">
+            src="https://zenzalepik.github.io/Zalepik_Images/icons/img_icon_domain_zalepik.svg" alt="">
         </div>
         <div>
           <h1>
@@ -29,7 +29,7 @@
         class="sm:col-start-4 sm:col-end-7 col-start-1 col-end-13 bg-cyan_gray_light rounded-tr-3xl sm:rounded-tr-none">
         <div>
           <img class="rounded-2xl"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/img_icon_email_bisnis_zalepik.svg" alt="">
+            src="https://zenzalepik.github.io/Zalepik_Images/icons/img_icon_email_bisnis_zalepik.svg" alt="">
         </div>
         <div>
           <h1>
@@ -43,7 +43,7 @@
       <a class="sm:col-start-7 sm:col-end-10 col-start-1 col-end-13 bg-cyan_gray_light">
         <div>
           <img class="rounded-2xl"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/img_icon_responsif_design_zalepik.svg" alt="">
+            src="https://zenzalepik.github.io/Zalepik_Images/icons/img_icon_responsif_design_zalepik.svg" alt="">
         </div>
         <div>
           <h1>
@@ -55,7 +55,7 @@
       </a>
       <a class="sm:col-start-10 sm:col-end-13 col-start-1 col-end-13 bg-cyan_gray_light">
         <div>
-          <img class="rounded-2xl" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/img_icon_seo_zalepik.svg"
+          <img class="rounded-2xl" src="https://zenzalepik.github.io/Zalepik_Images/icons/img_icon_seo_zalepik.svg"
             alt="">
         </div>
         <div>
@@ -69,7 +69,7 @@
       <a class="sm:col-start-1 sm:col-end-4 col-start-1 col-end-13 bg-cyan_gray_light">
         <div>
           <img class="rounded-2xl"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/img_icon_server_hosting_cloud_zalepik.svg"
+            src="https://zenzalepik.github.io/Zalepik_Images/icons/img_icon_server_hosting_cloud_zalepik.svg"
             alt="">
         </div>
         <div>
@@ -82,7 +82,7 @@
       </a>
       <a class="sm:col-start-4 sm:col-end-7 col-start-1 col-end-13 bg-cyan_gray_light">
         <div>
-          <img class="rounded-2xl" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/img_icon_ssl_zalepik.svg"
+          <img class="rounded-2xl" src="https://zenzalepik.github.io/Zalepik_Images/icons/img_icon_ssl_zalepik.svg"
             alt="">
         </div>
         <div>
@@ -96,7 +96,7 @@
       <a class="sm:col-start-7 sm:col-end-10 col-start-1 col-end-13 bg-cyan_gray_light">
         <div>
           <img class="rounded-2xl"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/img_icon_maintenace_support_zalepik.svg" alt="">
+            src="https://zenzalepik.github.io/Zalepik_Images/icons/img_icon_maintenace_support_zalepik.svg" alt="">
         </div>
         <div>
           <h1>
@@ -109,7 +109,7 @@
       <a class="sm:col-start-10 sm:col-end-13 col-start-1 col-end-13 bg-cyan_gray_light">
         <div>
           <img class="rounded-2xl"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/img_icon_instagram_shopping_zalepik.svg" alt="">
+            src="https://zenzalepik.github.io/Zalepik_Images/icons/img_icon_instagram_shopping_zalepik.svg" alt="">
         </div>
         <div>
           <h1>
@@ -123,7 +123,7 @@
         class="sm:col-start-4 sm:col-end-7 col-start-1 col-end-13 bg-cyan_gray_light rounded-bl-3xl sm:rounded-bl-none">
         <div>
           <img class="rounded-2xl"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/img_icon_video_tutorial_zalepik.svg" alt="">
+            src="https://zenzalepik.github.io/Zalepik_Images/icons/img_icon_video_tutorial_zalepik.svg" alt="">
         </div>
         <div>
           <h1>
@@ -136,7 +136,7 @@
         class="sm:col-start-7 sm:col-end-10 col-start-1 col-end-13 bg-cyan_gray_light rounded-br-3xl sm:rounded-br-none">
         <div>
           <img class="rounded-2xl"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/img_icon_gratis_logo_zalepik.svg" alt="">
+            src="https://zenzalepik.github.io/Zalepik_Images/icons/img_icon_gratis_logo_zalepik.svg" alt="">
         </div>
         <div>
           <h1>
@@ -162,7 +162,7 @@
     </div>
     <a class="sm:col-start-1 sm:col-end-5 col-start-2 col-end-12 bg-white rounded-3xl" href="https://wa.me/6281330876992?text=Assalamu%27alaikum...%0A%0A%F0%9F%91%8BHalo...%20Saya%20ingin%20memesan%20pembuatan%20website%0A%0A">
       <div>
-        <img class="rounded-2xl" src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-price-landing-page.png"
+        <img class="rounded-2xl" src="https://zenzalepik.github.io/Zalepik_Images/img-price-landing-page.png"
           alt="">
       </div>
       <div>
@@ -180,7 +180,7 @@
     </a>
     <a class="sm:col-start-5 sm:col-end-9 col-start-2 col-end-12 bg-white rounded-3xl" href="https://wa.me/6281330876992?text=Assalamu%27alaikum...%0A%0A%F0%9F%91%8BHalo...%20Saya%20ingin%20memesan%20pembuatan%20website%0A%0A">
       <div>
-        <img class="rounded-2xl" src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-price-company-profile.png"
+        <img class="rounded-2xl" src="https://zenzalepik.github.io/Zalepik_Images/img-price-company-profile.png"
           alt="">
       </div>
       <div>
@@ -199,7 +199,7 @@
     </a>
     <a class="zalepik_hightlight zalepik_cta sm:col-start-9 sm:col-end-13 col-start-2 col-end-12 bg-white rounded-3xl" href="https://wa.me/6281330876992?text=Assalamu%27alaikum...%0A%0A%F0%9F%91%8BHalo...%20Saya%20ingin%20memesan%20pembuatan%20website%0A%0A">
       <div>
-        <img class="rounded-2xl" src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-price-online-shop_2.png"
+        <img class="rounded-2xl" src="https://zenzalepik.github.io/Zalepik_Images/img-price-online-shop_2.png"
           alt="">
       </div>
       <div>
@@ -220,7 +220,7 @@
     <a class="sm:col-start-3 sm:col-end-7 col-start-2 col-end-12 bg-white rounded-3xl" href="https://wa.me/6281330876992?text=Assalamu%27alaikum...%0A%0A%F0%9F%91%8BHalo...%20Saya%20ingin%20memesan%20pembuatan%20website%0A%0A">
       <div>
         <img class="rounded-2xl"
-          src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-price-illustration-online-course_2.png" alt="">
+          src="https://zenzalepik.github.io/Zalepik_Images/img-price-illustration-online-course_2.png" alt="">
       </div>
       <div>
         <h1>
@@ -240,7 +240,7 @@
     <a class="sm:col-start-7 sm:col-end-11 col-start-2 col-end-12 bg-white rounded-3xl" href="https://wa.me/6281330876992?text=Assalamu%27alaikum...%0A%0A%F0%9F%91%8BHalo...%20Saya%20ingin%20memesan%20pembuatan%20website%0A%0A">
       <div>
         <img class="rounded-2xl"
-          src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-price-interactive-website.png" alt="">
+          src="https://zenzalepik.github.io/Zalepik_Images/img-price-interactive-website.png" alt="">
       </div>
       <div>
         <h1>
@@ -271,7 +271,7 @@
       class="sm:col-start-1 sm:col-end-5 col-start-1 col-end-7 bg-white sm:rounded-tl-3xl rounded-tl-xl py-4 sm:px-8 px-2">
       <div>
         <img class="rounded-2xl"
-          src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/img_icon_Team Profesional.svg" alt="">
+          src="https://zenzalepik.github.io/Zalepik_Images/icons/img_icon_Team Profesional.svg" alt="">
       </div>
       <div>
         <h1>
@@ -284,7 +284,7 @@
       class="sm:col-start-5 sm:col-end-9 col-start-7 col-end-13 bg-white sm:rounded-none rounded-tr-xl py-4 sm:px-8 px-2">
       <div>
         <img class="rounded-2xl"
-          src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/img_icon_Support Terbaik.svg" alt="">
+          src="https://zenzalepik.github.io/Zalepik_Images/icons/img_icon_Support Terbaik.svg" alt="">
       </div>
       <div>
         <h1>
@@ -297,7 +297,7 @@
       class="sm:col-start-9 sm:col-end-13 col-start-1 col-end-7 bg-white sm:rounded-tr-3xl rounded-none py-4 sm:px-8 px-2">
       <div>
         <img class="rounded-2xl"
-          src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/img_icon_Keamanan Terjamin.svg" alt="">
+          src="https://zenzalepik.github.io/Zalepik_Images/icons/img_icon_Keamanan Terjamin.svg" alt="">
       </div>
       <div>
         <h1>
@@ -311,7 +311,7 @@
       class="sm:col-start-1 sm:col-end-5 col-start-7 col-end-13 bg-white sm:rounded-bl-3xl rounded-none py-4 sm:px-8 px-2">
       <div>
         <img class="rounded-2xl"
-          src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/img_icon_Pelayanan Ramah & Menyenangkan.svg"
+          src="https://zenzalepik.github.io/Zalepik_Images/icons/img_icon_Pelayanan Ramah & Menyenangkan.svg"
           alt="">
       </div>
       <div>
@@ -325,7 +325,7 @@
       class="sm:col-start-5 sm:col-end-9 col-start-1 col-end-7 bg-white sm:rounded-none rounded-bl-xl py-4 sm:px-8 px-2">
       <div>
         <img class="rounded-2xl"
-          src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/img_icon_Desain Berkualitas.svg" alt="">
+          src="https://zenzalepik.github.io/Zalepik_Images/icons/img_icon_Desain Berkualitas.svg" alt="">
       </div>
       <div>
         <h1>
@@ -338,7 +338,7 @@
       class="sm:col-start-9 sm:col-end-13 col-start-7 col-end-13 bg-white sm:rounded-br-3xl rounded-br-xl py-4 sm:px-8 px-2">
       <div>
         <img class="rounded-2xl"
-          src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/img_icon_Banyak Gratisnya!k.svg" alt="">
+          src="https://zenzalepik.github.io/Zalepik_Images/icons/img_icon_Banyak Gratisnya!k.svg" alt="">
       </div>
       <div>
         <h1>
@@ -359,75 +359,75 @@
       <div class="grid grid-cols-12 text-center zalepik-img-list variable slider">
         <a href="http://" target="_blank" rel="noopener noreferrer">
           <img class="col-start-1 col-end-13"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-service-uiux-full-growcer.png">
+            src="https://zenzalepik.github.io/Zalepik_Images/img-service-uiux-full-growcer.png">
         </a>
         <a href="http://" target="_blank" rel="noopener noreferrer">
           <img class="col-start-1 col-end-13"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-service-uiux-full-usg-cover.png">
+            src="https://zenzalepik.github.io/Zalepik_Images/img-service-uiux-full-usg-cover.png">
         </a>
         <a href="http://" target="_blank" rel="noopener noreferrer">
           <img class="col-start-1 col-end-13"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-service-uiux-full-usg-1.png">
+            src="https://zenzalepik.github.io/Zalepik_Images/img-service-uiux-full-usg-1.png">
         </a>
         <a href="http://" target="_blank" rel="noopener noreferrer">
           <img class="col-start-1 col-end-13"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-service-uiux-full-radyalabs.png">
+            src="https://zenzalepik.github.io/Zalepik_Images/img-service-uiux-full-radyalabs.png">
         </a>
         <a href="http://" target="_blank" rel="noopener noreferrer">
           <img class="col-start-1 col-end-7"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-service-uiux-full-zenvidio-login.png">
+            src="https://zenzalepik.github.io/Zalepik_Images/img-service-uiux-full-zenvidio-login.png">
         </a>
         <a href="http://" target="_blank" rel="noopener noreferrer">
           <img class="col-start-7 col-end-13"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-service-uiux-full-zhop-dashboard.png">
+            src="https://zenzalepik.github.io/Zalepik_Images/img-service-uiux-full-zhop-dashboard.png">
         </a>
         <a href="http://" target="_blank" rel="noopener noreferrer">
           <img class="col-start-1 col-end-7 sm:col-end-4"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/portfolio/zalepik_portfolio_dribbble_invite_inspire_by...png">
+            src="https://zenzalepik.github.io/Zalepik_Images/portfolio/zalepik_portfolio_dribbble_invite_inspire_by...png">
         </a>
         <a href="http://" target="_blank" rel="noopener noreferrer">
           <img class="sm:col-start-4 sm:col-end-7 col-start-7 col-end-13"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/portfolio/zalepik_portfolio_zhop_sm.png">
+            src="https://zenzalepik.github.io/Zalepik_Images/portfolio/zalepik_portfolio_zhop_sm.png">
         </a>
         <a href="http://" target="_blank" rel="noopener noreferrer">
           <img class="sm:col-start-7 sm:col-end-10 col-start-1 col-end-7"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/portfolio/zalepik_portfolio_Zalepik_Website1.png">
+            src="https://zenzalepik.github.io/Zalepik_Images/portfolio/zalepik_portfolio_Zalepik_Website1.png">
         </a>
         <a href="http://" target="_blank" rel="noopener noreferrer">
           <img class="sm:col-start-10 col-end-13 col-start-7"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/portfolio/zalepik_porfolio_4.png">
+            src="https://zenzalepik.github.io/Zalepik_Images/portfolio/zalepik_porfolio_4.png">
         </a>
         <a href="http://" target="_blank" rel="noopener noreferrer">
           <img class="col-start-1 col-end-7 sm:col-end-4"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-service-uiux-full-cocolette.png">
+            src="https://zenzalepik.github.io/Zalepik_Images/img-service-uiux-full-cocolette.png">
         </a>
         <a href="http://" target="_blank" rel="noopener noreferrer">
           <img class="sm:col-start-4 sm:col-end-7 col-start-7 col-end-13"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/portfolio/zalepik_portfolio_All_Gimpscape_Banner.png">
+            src="https://zenzalepik.github.io/Zalepik_Images/portfolio/zalepik_portfolio_All_Gimpscape_Banner.png">
         </a>
         <a href="http://" target="_blank" rel="noopener noreferrer">
           <img class="sm:col-start-7 sm:col-end-10 col-start-1 col-end-7"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/portfolio/todolist.png">
+            src="https://zenzalepik.github.io/Zalepik_Images/portfolio/todolist.png">
         </a>
         <a href="http://" target="_blank" rel="noopener noreferrer">
           <img class="sm:col-start-10 col-end-13 col-start-7"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/portfolio/zalepik_portfolio_mengarungi_samudra.png">
+            src="https://zenzalepik.github.io/Zalepik_Images/portfolio/zalepik_portfolio_mengarungi_samudra.png">
         </a>
         <a href="http://" target="_blank" rel="noopener noreferrer">
           <img class="col-start-1 col-end-7"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-service-uiux-full-growcer-color-palette.png">
+            src="https://zenzalepik.github.io/Zalepik_Images/img-service-uiux-full-growcer-color-palette.png">
         </a>
         <a href="http://" target="_blank" rel="noopener noreferrer">
           <img class="col-start-7 col-end-13"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-service-uiux-full-growcer-mobile.png">
+            src="https://zenzalepik.github.io/Zalepik_Images/img-service-uiux-full-growcer-mobile.png">
         </a>
         <a href="http://" target="_blank" rel="noopener noreferrer">
           <img class="col-start-1 col-end-13"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-service-uiux-full-growcer-desktop.png">
+            src="https://zenzalepik.github.io/Zalepik_Images/img-service-uiux-full-growcer-desktop.png">
         </a>
         <a href="http://" target="_blank" rel="noopener noreferrer">
           <img class="rounded-and-more sm:mt-16 mt-4 mb-16 sm:mb-56 sm:col-start-2 sm:col-end-12 col-start-1 col-end-13"
-            src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-service-close-content-masih-ada-lagi.png">
+            src="https://zenzalepik.github.io/Zalepik_Images/img-service-close-content-masih-ada-lagi.png">
         </a>
       </div>
     </div>
@@ -441,7 +441,7 @@
 <div id="software"
   class="mt-32 col-start-1 col-end-13 grid grid-cols-12 gap-2 z_bg_gradient sm:p-8 p-2 sm:mx-10 mx-2 rounded-3xl text-center">
   <div class="col-start-1 col-end-13">
-  <img class="sm:rounded-xl rounded-2xl" style="width: 100%; margin: 0px !important; max-width: 100%;" src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_zalepik_success.png" alt="" srcset="">
+  <img class="sm:rounded-xl rounded-2xl" style="width: 100%; margin: 0px !important; max-width: 100%;" src="https://zenzalepik.github.io/Zalepik_Images/img_zalepik_success.png" alt="" srcset="">
 </div>
   <div id="title_header_home" class="zalepik_wrap_large_area text-center">
     <h1 class="col-start-1 col-end-13 zalepik_title_border zalepik_title_shadow_2 text-white"
@@ -473,7 +473,7 @@
       href="../services/development/">
       <div>
         <img class="rounded-2xl"
-          src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-service-header-development-thumbnail.png" alt="">
+          src="https://zenzalepik.github.io/Zalepik_Images/img-service-header-development-thumbnail.png" alt="">
       </div>
       <div>
         <h1>
@@ -485,7 +485,7 @@
       href="../services/uiux/">
       <div>
         <img class="rounded-2xl"
-          src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-service-header-uiux-thumbnail.png" alt="">
+          src="https://zenzalepik.github.io/Zalepik_Images/img-service-header-uiux-thumbnail.png" alt="">
       </div>
       <div>
         <h1>
@@ -497,7 +497,7 @@
       href="../services/illustration/">
       <div>
         <img class="rounded-2xl"
-          src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-service-header-illustration-thumbnail.png" alt="">
+          src="https://zenzalepik.github.io/Zalepik_Images/img-service-header-illustration-thumbnail.png" alt="">
       </div>
       <div>
         <h1>
@@ -509,7 +509,7 @@
       href="../services/icon_and_logo/">
       <div>
         <img class="rounded-2xl"
-          src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-service-header-icon-and-logo-thumbnail.png" alt="">
+          src="https://zenzalepik.github.io/Zalepik_Images/img-service-header-icon-and-logo-thumbnail.png" alt="">
       </div>
       <div>
         <h1>
