--- a/themes/zalepik/layouts/partials/call_to_action.html
+++ b/themes/zalepik/layouts/partials/call_to_action.html
@@ -9,9 +9,9 @@
     <div class="w-full relative">
         <a href="{{ .Site.BaseURL }}/hubungi/"
             class="zalepik_hubungi zalepik_button_blue absolute top-0 py-4 px-10 mb-64 mx-auto inset-x-0 w-56 text-center rounded-lg zalepik_index9">Mari Bekerjasama →</a></li>
-        <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_let_start_collabs.png" alt="" srcset=""
+        <img src="https://zenzalepik.github.io/Zalepik_Images/img_let_start_collabs.png" alt="" srcset=""
             class="w-full let_start_collabs hidden md:block">
-        <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_let_start_collabs_sm.png" alt="" srcset=""
+        <img src="https://zenzalepik.github.io/Zalepik_Images/img_let_start_collabs_sm.png" alt="" srcset=""
             class="w-full let_start_collabs block md:hidden">
     </div>
     <!-- End CTA-->
