--- a/themes/zalepik/layouts/partials/clients.html
+++ b/themes/zalepik/layouts/partials/clients.html
@@ -6,11 +6,11 @@
                 <div id="clients" class="zalepik_clients grid-cols-1 sm:grid-cols-4 text-center">
                     <!--<div>
                         <a class="insline-block" target="_blank" href="https://www.facebook.com/ZalepikDesign/"><img
-                                class="inline-block" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icon-social-facebook.svg"></a>
+                                class="inline-block" src="https://zenzalepik.github.io/Zalepik_Images/icon-social-facebook.svg"></a>
                     </div>-->
                     <div>
                         <a class="zalepik_clients_list" target="_blank" href="https://pthartimteknologiindonesia.com">
-                            <img class="inline-block" src="https://mzainulmuttaqin.github.io/Zalepik_Images/clients/pt_hartim_teknologi_indonesia.png">
+                            <img class="inline-block" src="https://zenzalepik.github.io/Zalepik_Images/clients/pt_hartim_teknologi_indonesia.png">
                             <br><b>Pt. Hartim Teknologi Indonesia</b>
                             <br>
                             <svg class="mx-auto mt-2" width="106" height="28" viewBox="0 0 106 28" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -26,7 +26,7 @@
                     </div>
                     <div>
                         <a class="zalepik_clients_list" target="_blank" href="https://eatjoyers.in">
-                            <img class="inline-block" src="https://mzainulmuttaqin.github.io/Zalepik_Images/clients/eatjoyers.png">
+                            <img class="inline-block" src="https://zenzalepik.github.io/Zalepik_Images/clients/eatjoyers.png">
                             <br><b>EatJoyers</b>
                             <br>
                             <svg class="mx-auto mt-2" width="92" height="28" viewBox="0 0 92 28" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -51,7 +51,7 @@
                     </div>
                     <div>
                         <a class="zalepik_clients_list" target="_blank" href="https://wa.me/6281330876992?text=Assalamu%27alaikum...%0A%0A%F0%9F%91%8BHalo...%20Saya%20ingin%20memesan%20pembuatan%20website%0A%0A">
-                            <img class="inline-block" src="https://mzainulmuttaqin.github.io/Zalepik_Images/clients/bank_sampah_alma.png">
+                            <img class="inline-block" src="https://zenzalepik.github.io/Zalepik_Images/clients/bank_sampah_alma.png">
                             <br><b>Bank Sampah Alma</b>
                             <br>
                             <svg class="mx-auto mt-2" width="124" height="28" viewBox="0 0 124 28" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -67,7 +67,7 @@
                     </div>
                     <div>
                         <a class="zalepik_clients_list" target="_blank" href="https://wa.me/6281330876992?text=Assalamu%27alaikum...%0A%0A%F0%9F%91%8BHalo...%20Saya%20ingin%20memesan%20pembuatan%20website%0A%0A">
-                            <img class="inline-block" src="https://mzainulmuttaqin.github.io/Zalepik_Images/clients/nirmal_foods.png">
+                            <img class="inline-block" src="https://zenzalepik.github.io/Zalepik_Images/clients/nirmal_foods.png">
                             <br><b>Nirmal Foods (vito the italia)</b>
                             <br>
                             <svg class="mx-auto mt-2" width="92" height="28" viewBox="0 0 92 28" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -93,7 +93,7 @@
 
                     <div>
                         <a class="zalepik_clients_list" target="_blank" href="#">
-                            <img class="inline-block" src="https://mzainulmuttaqin.github.io/Zalepik_Images/clients/dekat_bunda.png">
+                            <img class="inline-block" src="https://zenzalepik.github.io/Zalepik_Images/clients/dekat_bunda.png">
                             <br><b>Dekat Bunda</b>
                             <br>
                             <svg class="mx-auto mt-2" width="106" height="28" viewBox="0 0 106 28" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -109,7 +109,7 @@
                     </div>
                     <div>
                         <a class="zalepik_clients_list" target="_blank" href="https://eatjoyers.in">
-                            <img class="inline-block" src="https://mzainulmuttaqin.github.io/Zalepik_Images/clients/smkn_kudu.png">
+                            <img class="inline-block" src="https://zenzalepik.github.io/Zalepik_Images/clients/smkn_kudu.png">
                             <br><b>SMK Negeri Kudu</b>
                             <br>
                             <svg class="mx-auto mt-2" width="106" height="28" viewBox="0 0 106 28" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -125,7 +125,7 @@
                     </div>
                     <div>
                         <a class="zalepik_clients_list" target="_blank" href="https://wa.me/6281330876992?text=Assalamu%27alaikum...%0A%0A%F0%9F%91%8BHalo...%20Saya%20ingin%20memesan%20pembuatan%20website%0A%0A">
-                            <img class="inline-block" src="https://mzainulmuttaqin.github.io/Zalepik_Images/clients/yayasan_betterkids_madani_indonesia.png">
+                            <img class="inline-block" src="https://zenzalepik.github.io/Zalepik_Images/clients/yayasan_betterkids_madani_indonesia.png">
                             <br><b>Yayasan Betterkids Madani Indonesia</b>
                             <br>
                             <svg class="mx-auto mt-2" width="124" height="28" viewBox="0 0 124 28" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -141,7 +141,7 @@
                     </div>
                     <div>
                         <a class="zalepik_clients_list" target="_blank" href="https://wa.me/6281330876992?text=Assalamu%27alaikum...%0A%0A%F0%9F%91%8BHalo...%20Saya%20ingin%20memesan%20pembuatan%20website%0A%0A">
-                            <img class="inline-block" src="https://mzainulmuttaqin.github.io/Zalepik_Images/clients/hitung_bunda.png">
+                            <img class="inline-block" src="https://zenzalepik.github.io/Zalepik_Images/clients/hitung_bunda.png">
                             <br><b>Hitung Bunda</b>
                             <br>
                             <svg class="mx-auto mt-2" width="106" height="28" viewBox="0 0 106 28" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -157,7 +157,7 @@
                     </div>
                     <div>
                         <a class="zalepik_clients_list" target="_blank" href="https://wa.me/6281330876992?text=Assalamu%27alaikum...%0A%0A%F0%9F%91%8BHalo...%20Saya%20ingin%20memesan%20pembuatan%20website%0A%0A">
-                            <img class="inline-block" src="https://mzainulmuttaqin.github.io/Zalepik_Images/clients/jombang_mengaji.png">
+                            <img class="inline-block" src="https://zenzalepik.github.io/Zalepik_Images/clients/jombang_mengaji.png">
                             <br><b>Jombang Mengaji</b>
                             <br>
                             <svg class="mx-auto mt-2" width="106" height="28" viewBox="0 0 106 28" fill="none" xmlns="http://www.w3.org/2000/svg">
