--- a/themes/zalepik/layouts/partials/footer.html
+++ b/themes/zalepik/layouts/partials/footer.html
@@ -85,9 +85,9 @@
             <a href="{{ .Site.BaseURL }}/hubungi/"
                 class="zalepik_button_blue absolute bottom-0 py-4 px-10 mb-64 mx-auto inset-x-0 w-56 text-center rounded-lg">Let's
                 Go →</a></li>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_let_start_collabs.svg" alt="" srcset=""
+            <img src="https://zenzalepik.github.io/Zalepik_Images/img_let_start_collabs.svg" alt="" srcset=""
                 class="w-full let_start_collabs hidden md:block">
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_let_start_collabs_sm.svg" alt="" srcset=""
+            <img src="https://zenzalepik.github.io/Zalepik_Images/img_let_start_collabs_sm.svg" alt="" srcset=""
                 class="w-full let_start_collabs block md:hidden">
         </div>
         <!-- End Contact-->
@@ -195,33 +195,33 @@
                 <div id="portfolio_home" class="zalepik_social">
                     <!--<div>
                         <a class="insline-block" target="_blank" href="https://www.facebook.com/ZalepikDesign/"><img
-                                class="inline-block" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icon-social-facebook.svg"></a>
+                                class="inline-block" src="https://zenzalepik.github.io/Zalepik_Images/icon-social-facebook.svg"></a>
                     </div>-->
                     <div>
                         <a class="insline-block" target="_blank"
                             href="https://wa.me/6281330876992?text=Assalamu%27alaikum...%0A%0A%F0%9F%91%8BHalo...%20Saya%20ingin%20memesan%20pembuatan%20website%0A%0A"><img
-                                class="inline-block" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icon-social-whatsapp.svg"></a>
+                                class="inline-block" src="https://zenzalepik.github.io/Zalepik_Images/icon-social-whatsapp.svg"></a>
                     </div>
                     <!--<div>
                         <a class="insline-block" target="_blank" href="https://join.skype.com/invite/fcrye4BtnrBO"><img
-                                class="inline-block" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icon-social-skype.svg"></a>
+                                class="inline-block" src="https://zenzalepik.github.io/Zalepik_Images/icon-social-skype.svg"></a>
                     </div>-->
                     <div>
                         <a class="insline-block" target="_blank" href="https://www.instagram.com/zalepik_studio/"><img
-                                class="inline-block" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icon-social-instagram.svg"></a>
+                                class="inline-block" src="https://zenzalepik.github.io/Zalepik_Images/icon-social-instagram.svg"></a>
                     </div>
                     <div>
                         <a class="insline-block" target="_blank"
                             href="https://www.youtube.com/channel/UCyZQybnpMJvc0mzxujs3tJg"><img class="inline-block"
-                                src="https://mzainulmuttaqin.github.io/Zalepik_Images/icon-social-youtube.svg"></a>
+                                src="https://zenzalepik.github.io/Zalepik_Images/icon-social-youtube.svg"></a>
                     </div>
                     <div>
                         <a class="insline-block" target="_blank" href="https://www.behance.net/zalepik"><img
-                                class="inline-block" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icon-social-behance.svg"></a>
+                                class="inline-block" src="https://zenzalepik.github.io/Zalepik_Images/icon-social-behance.svg"></a>
                     </div>
                     <div>
                         <a class="insline-block" target="_blank" href="https://www.dribbble.com/zalepik"><img
-                                class="inline-block" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icon-social-dribbble.svg"></a>
+                                class="inline-block" src="https://zenzalepik.github.io/Zalepik_Images/icon-social-dribbble.svg"></a>
                     </div>
                 </div>
             </div>
