--- a/themes/zalepik/layouts/partials/head.html
+++ b/themes/zalepik/layouts/partials/head.html
@@ -24,7 +24,7 @@
         Error 404 | Zalepik.com
     {{ end }}
 </title>
-<link rel="icon" type="image/png" href="https://mzainulmuttaqin.github.io/Zalepik_Images/logo-color-small.png">
+<link rel="icon" type="image/png" href="https://zenzalepik.github.io/Zalepik_Images/logo-color-small.png">
 <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -36,7 +36,7 @@
 <style>
     /*  @media only screen and (max-width: 640px) {
         header>img {
-            content: url("https://mzainulmuttaqin.github.io/Zalepik_Images/slider-home-1-zalepik_640px.png") !important;
+            content: url("https://zenzalepik.github.io/Zalepik_Images/slider-home-1-zalepik_640px.png") !important;
         }
     }  */
 </style>
