--- a/themes/zalepik/layouts/partials/header.html
+++ b/themes/zalepik/layouts/partials/header.html
@@ -56,8 +56,8 @@
                 </div>
             </div>
             <div class="col-start-1 col-end-13">
-                <img class="w-full img_home_banner_main sm:block hidden" src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_hero_home.png" alt="">
-                <img class="w-full img_home_banner_main sm:hidden block" src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_hero_home_sm.png" alt="">
+                <img class="w-full img_home_banner_main sm:block hidden" src="https://zenzalepik.github.io/Zalepik_Images/img_hero_home.png" alt="">
+                <img class="w-full img_home_banner_main sm:hidden block" src="https://zenzalepik.github.io/Zalepik_Images/img_hero_home_sm.png" alt="">
             </div>
         </div>
     </header>
@@ -193,12 +193,12 @@
                     <div class="col-start-2 col-end-12 grid lg:grid-cols-5 md:grid-cols-3 text-center pb-32 grid-cols-2 gap-y-20 items-center">
                         <div class="zalepik_category grid items-center">
                             <a id="" href="" target="_blank" class="zwriter_social_behance pb-0 box-border">
-                                <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icon-social-LinkedIn.png" alt="" class="shadow-4xl hover:shadow-img_hover no-padding redius-linkedin box-border">
+                                <img src="https://zenzalepik.github.io/Zalepik_Images/icon-social-LinkedIn.png" alt="" class="shadow-4xl hover:shadow-img_hover no-padding redius-linkedin box-border">
                             </a>
                         </div>
                         <div class="zalepik_category">
                             <a id="" class="zwriter_social_whatsapp" href="" target="_blank">
-                                <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-social-whatsapp.svg" alt="">
+                                <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-social-whatsapp.svg" alt="">
                                 <br>
                                 <span>
                                     WhatsApp
@@ -207,7 +207,7 @@
                         </div>
                         <div class="zalepik_category">
                             <a id="" class="zwriter_social_dribbble" href="" target="_blank">
-                                <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-social-dribbble.svg" alt="">
+                                <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-social-dribbble.svg" alt="">
                                 <br>
                                 <span>
                                     dribbble
@@ -216,7 +216,7 @@
                         </div>
                         <div class="zalepik_category">
                             <a id="" class="zwriter_social_behance" href="" target="_blank">
-                                <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-social-behance.svg" alt="">
+                                <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-social-behance.svg" alt="">
                                 <br>
                                 <span>
                                     Behance
@@ -225,7 +225,7 @@
                         </div>
                         <div class="zalepik_category">
                             <a id="" class="zwriter_social_instagram" href="" target="_blank">
-                                <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-social-instagram.svg" alt="">
+                                <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-social-instagram.svg" alt="">
                                 <br>
                                 <span>
                                     Instagram
@@ -235,7 +235,7 @@
                         <!--Display None-->
                         <div class="zalepik_category" style="display: none">
                             <a id="" class="zwriter_social_github" href="" target="_blank">
-                                <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-social-instagram.svg" alt="">
+                                <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-social-instagram.svg" alt="">
                                 <br>
                                 <span>
                                     Github
@@ -244,7 +244,7 @@
                         </div>
                         <div class="zalepik_category" style="display: none">
                             <a id="" class="zwriter_social_twitter" href="" target="_blank">
-                                <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-social-instagram.svg" alt="">
+                                <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-social-instagram.svg" alt="">
                                 <br>
                                 <span>
                                     Twitter
@@ -253,7 +253,7 @@
                         </div>
                         <div class="zwriter_social_upwork" style="display: none">
                             <a id="" class="zwriter_social_github" href="" target="_blank">
-                                <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-social-instagram.svg" alt="">
+                                <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-social-instagram.svg" alt="">
                                 <br>
                                 <span>
                                     Upwork
@@ -262,7 +262,7 @@
                         </div>
                         <div class="zalepik_category" style="display: none">
                             <a id="" class="zwriter_social_fiverr" href="" target="_blank">
-                                <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-social-instagram.svg" alt="">
+                                <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-social-instagram.svg" alt="">
                                 <br>
                                 <span>
                                     Fiverr
@@ -271,7 +271,7 @@
                         </div>
                         <div class="zalepik_category" style="display: none">
                             <a id="" class="zwriter_social_facebook" href="" target="_blank">
-                                <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-social-instagram.svg" alt="">
+                                <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-social-instagram.svg" alt="">
                                 <br>
                                 <span>
                                     Facebook
