--- a/themes/zalepik/layouts/partials/layanan_kami.html
+++ b/themes/zalepik/layouts/partials/layanan_kami.html
@@ -4,7 +4,7 @@
 </div>
 <div class="grid grid-cols-12 text-center bg-cyan_gray">
     <div class="order-1 zalepik_illustration">
-        <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_skill_3.png">
+        <img src="https://zenzalepik.github.io/Zalepik_Images/img_skill_3.png">
     </div>
     <div class="order-2 zalepik_wrap_text_illustration">
         <div class="col-start-2 col-span-4">
@@ -33,10 +33,10 @@
         </div>
     </div>
     <div class="md:order-4 order-3 zalepik_illustration">
-        <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_skill_1.png">
+        <img src="https://zenzalepik.github.io/Zalepik_Images/img_skill_1.png">
     </div>
     <div class="order-5 zalepik_illustration">
-        <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_skill_2.png">
+        <img src="https://zenzalepik.github.io/Zalepik_Images/img_skill_2.png">
     </div>
     <div class="order-6 zalepik_wrap_text_illustration">
         <div class="col-start-2 col-span-4">
@@ -67,7 +67,7 @@
     </div>
     
     <div class="md:order-8 order-7 zalepik_illustration">
-        <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_skill_4.png">
+        <img src="https://zenzalepik.github.io/Zalepik_Images/img_skill_4.png">
     </div>
 </div>
 <!-- End Layanan Kami -->
