--- a/themes/zalepik/layouts/partials/portfolios.html
+++ b/themes/zalepik/layouts/partials/portfolios.html
@@ -4,17 +4,17 @@
     </div>
     <a href="https://www.behance.net/gallery/119182661/USG-Website"
         class="zalepik_galery mb-12 col-start-2 col-end-12 block" target="_blank">
-        <img class="zalepik_image_galery w-full md:block hidden" src="https://mzainulmuttaqin.github.io/Zalepik_Images/portfolio/zalepik_portfolio_usg.png">
-        <img class="zalepik_image_galery w-full block md:hidden" src="https://mzainulmuttaqin.github.io/Zalepik_Images/portfolio/zalepik_portfolio_usg_sm.png">
+        <img class="zalepik_image_galery w-full md:block hidden" src="https://zenzalepik.github.io/Zalepik_Images/portfolio/zalepik_portfolio_usg.png">
+        <img class="zalepik_image_galery w-full block md:hidden" src="https://zenzalepik.github.io/Zalepik_Images/portfolio/zalepik_portfolio_usg_sm.png">
     </a>
     <a href="https://www.behance.net/gallery/122360945/Try-It-IRO-Color-Inspect-Zalepik-NyanDevId"
         class="zalepik_galery mb-12 col-start-2 col-end-12 block" target="_blank">
-        <img class="zalepik_image_galery w-full md:block hidden" src="https://mzainulmuttaqin.github.io/Zalepik_Images/portfolio/zalepik_portfolio_iro.png">
-        <img class="zalepik_image_galery w-full block md:hidden" src="https://mzainulmuttaqin.github.io/Zalepik_Images/portfolio/zalepik_portfolio_iro_sm.png">
+        <img class="zalepik_image_galery w-full md:block hidden" src="https://zenzalepik.github.io/Zalepik_Images/portfolio/zalepik_portfolio_iro.png">
+        <img class="zalepik_image_galery w-full block md:hidden" src="https://zenzalepik.github.io/Zalepik_Images/portfolio/zalepik_portfolio_iro_sm.png">
     </a>
     <a href="https://www.behance.net/gallery/122363789/Zenvideo-Redesign-Levideo-Website-By-Zalepik"
         class="zalepik_galery mb-12 col-start-2 col-end-12 block" target="_blank">
-        <img class="zalepik_image_galery w-full md:block hidden" src="https://mzainulmuttaqin.github.io/Zalepik_Images/portfolio/zalepik_portfolio_zenvideo.png">
-        <img class="zalepik_image_galery w-full block md:hidden" src="https://mzainulmuttaqin.github.io/Zalepik_Images/portfolio/zalepik_portfolio_zenvideo_sm.png">
+        <img class="zalepik_image_galery w-full md:block hidden" src="https://zenzalepik.github.io/Zalepik_Images/portfolio/zalepik_portfolio_zenvideo.png">
+        <img class="zalepik_image_galery w-full block md:hidden" src="https://zenzalepik.github.io/Zalepik_Images/portfolio/zalepik_portfolio_zenvideo_sm.png">
     </a>
 </div>
