--- a/themes/zalepik/layouts/partials/siapa_sih.html
+++ b/themes/zalepik/layouts/partials/siapa_sih.html
@@ -28,7 +28,7 @@
         <a class="zalepik_button_blue py-4 px-10 zalepik_button_banner_home mx-auto inset-x-0 w-56 text-center rounded-lg"
         href="{{ .Site.BaseURL }}/portofolio/">Lihat Karya Kami</a>
     </div>
-    <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_who_we_are.png" alt="" srcset="" class="w-full let_start_collabs hidden md:block">
-    <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_we_RE_sm.png" alt="" srcset="" class="w-full let_start_collabs block md:hidden">
+    <img src="https://zenzalepik.github.io/Zalepik_Images/img_who_we_are.png" alt="" srcset="" class="w-full let_start_collabs hidden md:block">
+    <img src="https://zenzalepik.github.io/Zalepik_Images/img_we_RE_sm.png" alt="" srcset="" class="w-full let_start_collabs block md:hidden">
 </div>
 <div class="zalepik_spacer_gray zalepik_z_index_min_7"></div>
