--- a/themes/zalepik/static/css/tailwind/custom.css
+++ b/themes/zalepik/static/css/tailwind/custom.css
@@ -1178,7 +1178,7 @@ iframe{
 }
 
 .zalepik_price_list{
-    background: url(https://mzainulmuttaqin.github.io/Zalepik_Images/img_bg_pricelist.svg);
+    background: url(https://zenzalepik.github.io/Zalepik_Images/img_bg_pricelist.svg);
     background-size: cover;
 }
 
@@ -1290,7 +1290,7 @@ iframe{
   }
 
   #zalepik_pertanyaan{
-    background: url(https://mzainulmuttaqin.github.io/Zalepik_Images/img_bg_pertanyaan.svg);
+    background: url(https://zenzalepik.github.io/Zalepik_Images/img_bg_pertanyaan.svg);
     background-size: cover;
     padding-bottom: 80px;
     margin-top: 80px;
