--- a/themes/zalepik/layouts/_default/single.html
+++ b/themes/zalepik/layouts/_default/single.html
@@ -25,7 +25,7 @@
             <div id="zcontent_right">
                 <a href="http://" target="_blank">
                     <div id="zcontent_right_download_ebook">
-                        <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/portfolio/zalepik_portfolio_zhop_sm.png" alt="" srcset="">
+                        <img src="https://zenzalepik.github.io/Zalepik_Images/portfolio/zalepik_portfolio_zhop_sm.png" alt="" srcset="">
                         <div>
                             <span>Ebook<br>Gratis</span><br>
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M13 10h5l-6 6-6-6h5V3h2v7zm-9 9h16v-7h2v8a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1v-8h2v7z"/></svg>
@@ -126,7 +126,7 @@
             <div id="zcontent_right">
                     <a href="http://" target="_blank">
                         <div id="zcontent_right_download_ebook">
-                            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/portfolio/zalepik_portfolio_zhop_sm.png" alt="" srcset="">
+                            <img src="https://zenzalepik.github.io/Zalepik_Images/portfolio/zalepik_portfolio_zhop_sm.png" alt="" srcset="">
                             <div>
                                 <span>Ebook<br>Gratis</span><br>
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M13 10h5l-6 6-6-6h5V3h2v7zm-9 9h16v-7h2v8a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1v-8h2v7z"/></svg>
