--- a/themes/zalepik/layouts/partials/nav.html
+++ b/themes/zalepik/layouts/partials/nav.html
@@ -3,7 +3,7 @@
         <nav class="zalepik_nav">
             <div class="zalepik_wrap_nav">
                 <div class="zalepik_wrap_logo text-center">
-                    <a href="{{ .Site.BaseURL }}"><img src="https://mzainulmuttaqin.github.io/Zalepik_Images/logo-color-small.svg" alt="Logo Zalepik"></a>
+                    <a href="{{ .Site.BaseURL }}"><img src="https://zenzalepik.github.io/Zalepik_Images/logo-color-small.svg" alt="Logo Zalepik"></a>
                     <a href="{{ .Site.BaseURL }}" class="">{{ .Site.Title }}</a>
                 </div>
                 <ul class="zalepik_wrap_menu_nav">
@@ -16,7 +16,7 @@
         <nav class="zalepik_nav">
             <div class="zalepik_wrap_nav">
                 <div class="zalepik_wrap_logo text-center">
-                    <a href="{{ .Site.BaseURL }}"><img src="https://mzainulmuttaqin.github.io/Zalepik_Images/logo-color-small.svg" alt="Logo Zalepik"></a>
+                    <a href="{{ .Site.BaseURL }}"><img src="https://zenzalepik.github.io/Zalepik_Images/logo-color-small.svg" alt="Logo Zalepik"></a>
                     <a href="{{ .Site.BaseURL }}" class="">{{ .Site.Title }}</a>
                 </div>
                 <ul class="zalepik_wrap_menu_nav">
@@ -42,7 +42,7 @@
     <nav class="zalepik_nav shadow-none static bg-opacity-0 block grid grid-cols-12 w-full">
         <div class="grid grid-cols-12 col-start-2 col-end-12 items-center">
         <div class="col-start-1 sm:col-end-6 col-end-4 text-sm text-DEFAULT">
-        <a class="align-middle inline-block mr-2" href="{{ .Site.BaseURL }}"><img class="" src="https://mzainulmuttaqin.github.io/Zalepik_Images/logo-color-small-zen.png" alt="Logo Zalepik"></a>
+        <a class="align-middle inline-block mr-2" href="{{ .Site.BaseURL }}"><img class="" src="https://zenzalepik.github.io/Zalepik_Images/logo-color-small-zen.png" alt="Logo Zalepik"></a>
         <a href="{{ .Site.BaseURL }}" class="hidden sm:inline-block align-middle">Zalepik</a>
         </div>
         <ul class="text-right col-start-4 sm:col-start-6 col-end-13">
@@ -60,7 +60,7 @@
     <nav class="zalepik_nav">
             <div class="zalepik_wrap_nav">
                 <div class="zalepik_wrap_logo">
-                    <a href="{{ .Site.BaseURL }}"><img src="https://mzainulmuttaqin.github.io/Zalepik_Images/logo-color-small.svg" alt="Logo Zalepik"></a>
+                    <a href="{{ .Site.BaseURL }}"><img src="https://zenzalepik.github.io/Zalepik_Images/logo-color-small.svg" alt="Logo Zalepik"></a>
                     <a href="{{ .Site.BaseURL }}" class="">{{ .Site.Title }}</a>
                 </div>
                 <ul class="zalepik_wrap_menu_nav">
@@ -70,7 +70,7 @@
                     <li class="zalepik_menu hover:text-blue-500"><a href="{{ .Site.BaseURL }}/artikel/">Artikel</a></li>
                     <li class="zalepik_menu ml-6 zalepik_button px-3">
                         <a class="zalepikDropwonButton" onclick="zalepikDropwonFunction()">
-                            <img class="inline-block pr-2" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-language-indonesian.svg" alt="Indonesia">
+                            <img class="inline-block pr-2" src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-language-indonesian.svg" alt="Indonesia">
                             <span class="inline-block text-black">
                                 Indonesia
                             </span>
@@ -78,19 +78,19 @@
                         </a>
                         <div id="zalepikDropdown" class="zalepik_dropdown_bahasa_wrap zalepikContent">
                             <a href="{{ .Site.BaseURL }}/arabic/" class="zalepik_dropdown_bahasa zalepik_button_icon hover:shadow-xl hover:border-blue-500 hover:text-blue-500">
-                                <img class="inline-block pr-2" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/arabic/arabic.svg" alt="Arabic">
+                                <img class="inline-block pr-2" src="https://zenzalepik.github.io/Zalepik_Images/icons/arabic/arabic.svg" alt="Arabic">
                                 <span class="inline-block text-black">
                                     Arabic
                                 </span>
                             </a>
                             <a href="{{ .Site.BaseURL }}" class="zalepik_dropdown_bahasa zalepik_button_icon hover:shadow-xl hover:border-blue-500 hover:text-blue-500">
-                                <img class="inline-block pr-2" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-language-indonesian.svg" alt="Indonesia">
+                                <img class="inline-block pr-2" src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-language-indonesian.svg" alt="Indonesia">
                                 <span class="inline-block text-black">
                                     Indonesia
                                 </span>
                             </a>
                             <a href="{{ .Site.BaseURL }}/english/" class="zalepik_dropdown_bahasa zalepik_button_icon hover:shadow-xl hover:border-blue-500 hover:text-blue-500">
-                                <img class="inline-block pr-2" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-language-english.svg" alt="English">
+                                <img class="inline-block pr-2" src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-language-english.svg" alt="English">
                                 <span class="inline-block text-black">
                                 English
                             </span>
@@ -98,11 +98,11 @@
                         </div>
                     </li>
                 </ul>
-                <img class="zalepik_drawer" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-drawer_menu.svg" alt="" srcset="">
+                <img class="zalepik_drawer" src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-drawer_menu.svg" alt="" srcset="">
             </div>
             <div class="zalepik_menu_drawer">
                 <a class="zalepikDropwonButton" onclick="zalepikDropwonFunction2()">
-                    <img class="inline-block" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-language-indonesian.svg" alt="Indonesia">
+                    <img class="inline-block" src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-language-indonesian.svg" alt="Indonesia">
                     <span class="inline-block text-black">
                         Indonesia
                     </span>
@@ -110,19 +110,19 @@
                 </a>
                 <div id="zalepikDropdown2" class="zalepik_dropdown_bahasa_wrap zalepikContent2">
                     <a href="{{ .Site.BaseURL }}/arabic/" class="zalepik_dropdown_bahasa zalepik_button_icon hover:shadow-xl hover:border-blue-500 hover:text-blue-500">
-                        <img class="inline-block pr-2" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/arabic/arabic.svg" alt="Arabic">
+                        <img class="inline-block pr-2" src="https://zenzalepik.github.io/Zalepik_Images/icons/arabic/arabic.svg" alt="Arabic">
                         <span class="inline-block text-black">
                             Arabic
                         </span>
                     </a>
                     <a href="{{ .Site.BaseURL }}" class="zalepik_dropdown_bahasa zalepik_button_icon hover:shadow-xl hover:border-blue-500 hover:text-blue-500">
-                        <img class="inline-block pr-2" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-language-indonesian.svg" alt="Indonesia">
+                        <img class="inline-block pr-2" src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-language-indonesian.svg" alt="Indonesia">
                         <span class="inline-block text-black">
                             Indonesia
                         </span>
                     </a>
                     <a href="{{ .Site.BaseURL }}/english/" class="zalepik_dropdown_bahasa zalepik_button_icon hover:shadow-xl hover:border-blue-500 hover:text-blue-500">
-                        <img class="inline-block pr-2" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-language-english.svg" alt="English">
+                        <img class="inline-block pr-2" src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-language-english.svg" alt="English">
                         <span class="inline-block text-black">
                         English
                     </span>
@@ -132,7 +132,7 @@
         </nav>
         <!-- End Nav -->
         <ul class="zalepik_wrap_menu_nav_drawer invisible">
-            <img class="zalepik_drawer_close" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-drawer-close.svg" alt="" srcset="">
+            <img class="zalepik_drawer_close" src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-drawer-close.svg" alt="" srcset="">
             <li class="zalepik_menu hover:text-blue-500"><a href="{{ .Site.BaseURL }}">Beranda</a></li>
             <li class="zalepik_menu hover:text-blue-500"><a href="{{ .Site.BaseURL }}/layanan/">Layanan</a></li>
             <li class="zalepik_menu hover:text-blue-500"><a href="{{ .Site.BaseURL }}/gratisan/">Gratisan</a></li>
